--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,5 @@ jobs:
         python -m pip install --upgrade pip
         pip install pipenv
         pipenv install --system
+        python manage.py collectstatic
         - run: python manage.py test
