--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,5 +21,5 @@ jobs:
         python -m pip install --upgrade pip
         pip install pipenv
         pipenv install --system
-        python manage.py collectstatic
+        python manage.py collectstatic --noinput
         - run: python manage.py test
