--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,6 @@ jobs:
         pip install pipenv
         pipenv install --system
         python manage.py collectstatic --noinput
-    - run: python manage.py test
+    - name: Run tests
+      working-directory: ./server
+      run: python manage.py test
