--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
         pip install pipenv
         pipenv install --system
         python manage.py collectstatic --noinput
+    - name: Run migrations
+      working-directory: ./server
+      run: python manage.py migrate
     - name: Run tests
       working-directory: ./server
       run: python manage.py test
