--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,38 +5,14 @@ on:
     branches:
       - main
   pull_request:
+      - main
 
 jobs:
-  django-tests:
+  test:
     runs-on: ubuntu-latest
-
-    services:
-      postgres:
-        image: postgres:10.8
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: github_actions
-        ports:
-          - 5432:5432
-        # needed because the postgres container does not provide a healthcheck
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: psycopg2 prerequisites
-      run: sudo apt-get install python-dev libpq-dev
-    - name: Install python dependencies
-      working-directory: ./server
-      run: |
-        python -m pip install --upgrade pip
-        pip install pipenv
-        pipenv install --system
-        python manage.py collectstatic --noinput
-      working-directory: ./server
-      run: python manage.py migrate
-    - name: Run tests
-      run: python server/manage.py test server
+      - uses: actions/checkout@v2
+      - name: Build the stack
+        run: docker-compose up -d
+      - name: Django tests
+        run: docker-compose exec server python manage.py test
