--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@vue/cli-plugin-router": "~4.5.8",
     "@vue/cli-service": "~4.5.8",
     "axe-core": "^4.0.2",
+    "jest-axe": "^4.1.0",
     "vue-axe": "^2.4.2",
     "vue-template-compiler": "^2.6.12"
   }
