Typo in workflow yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
           docker-compose exec -T server python manage.py migrate
           docker-compose exec -T server python manage.py test
       - name: Vue tests
-      - run: docker-compose exec frontend npm run test:unit
+        run: docker-compose exec frontend npm run test:unit
