--- a/server/Pipfile
+++ b/server/Pipfile
@@ -12,6 +12,7 @@ environs = {extras = ["django"], version = "==8.0.0"}
 whitenoise = "==5.1.0"
 gunicorn = "==20.0.4"
 django-ckeditor = "==6.0.0"
+django-storages = "*"
 
 [requires]
 python_version = "3.7"
