--- a/server/Pipfile
+++ b/server/Pipfile
@@ -13,6 +13,7 @@ whitenoise = "==5.1.0"
 gunicorn = "==20.0.4"
 django-ckeditor = "==6.0.0"
 django-storages = "*"
+boto3 = "==1.11.12"
 
 [requires]
 python_version = "3.7"
