Run migrate in docker-compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: server-dev
+      target: server-base
     working_dir: /code/server
-    command: gunicorn config.wsgi -b 0.0.0.0:8000
+    command: bash -c "python manage.py collectstatic --noinput && gunicorn config.wsgi -b 0.0.0.0:8000"
     volumes:
       - .:/code
     ports:
