--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -15,7 +15,16 @@ services:
       - db
       - frontend
     environment:
-      - "USE_LOCAL_STORAGE=FALSE"
+      - "USE_LOCAL_STORAGE=TRUE"
+      - "NODE_ENV=development"
+      - "DJANGO_SECRET_KEY=p=4f_cxdno4qj6itdx!@v%7oij3ma%b_y#422*t(dbpk9^pt08"
+      - "DJANGO_DEBUG=True"
+      - "DJANGO_SECURE_SSL_REDIRECT=False"
+      - "DJANGO_SECURE_HSTS_SECONDS=0"
+      - "DJANGO_SECURE_HSTS_INCLUDE_SUBDOMAINS=False"
+      - "DJANGO_SECURE_HSTS_PRELOAD=False"
+      - "DJANGO_SESSION_COOKIE_SECURE=False"
+      - "DJANGO_CSRF_COOKIE_SECURE=False"
   frontend:
     build:
       context: .
