--- a/server/Pipfile
+++ b/server/Pipfile
@@ -14,6 +14,7 @@ gunicorn = "==20.0.4"
 django-ckeditor = "==6.0.0"
 django-storages = "*"
 boto3 = "==1.11.12"
+djangorestframework = "*"
 
 [requires]
 python_version = "3.7"
