--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "p5": "^1.1.9",
     "vue": "^2.6.12",
+    "vue-axios": "^3.1.3",
     "vue-burger-menu": "^2.0.5",
     "vue-router": "^3.1.6"
   },
