--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,13 +16,22 @@ services:
       - frontend
     environment:
       - "USE_LOCAL_STORAGE=TRUE"
+      - "DJANGO_SECRET_KEY=p=4f_cxdno4qj6itdx!@v%7oij3ma%b_y#422*t(dbpk9^pt08"
+      - "DJANGO_DEBUG=True"
+      - "DJANGO_SECURE_SSL_REDIRECT=False"
+      - "DJANGO_SECURE_HSTS_SECONDS=0"
+      - "DJANGO_SECURE_HSTS_INCLUDE_SUBDOMAINS=False"
+      - "DJANGO_SECURE_HSTS_PRELOAD=False"
+      - "DJANGO_SESSION_COOKIE_SECURE=False"
+      - "DJANGO_CSRF_COOKIE_SECURE=False"
+
   frontend:
     build:
       context: .
       dockerfile: Dockerfile
       target: frontend-base
     environment:
-      - NODE_ENV=development
+      - "NODE_ENV=development"
     ports:
       - 8080:8080
     volumes:
