--- a/heroku.yml
+++ b/heroku.yml
@@ -8,7 +8,6 @@ build:
       target: server-prod
 release:
   image: web
-  command:
-    - ./on-release.sh
+  command: python manage.py collectstatic --noinput --clear
 run:
   web: gunicorn config.wsgi
