Run command in heroku yaml file

--- a/heroku.yml
+++ b/heroku.yml
@@ -8,6 +8,7 @@ build:
       target: server-prod
 release:
   image: web
-  command: python manage.py collectstatic --noinput --clear
+  command:
+    - python manage.py collectstatic --noinput --clear
 run:
   web: gunicorn config.wsgi
