--- a/server/Pipfile
+++ b/server/Pipfile
@@ -15,6 +15,7 @@ django-ckeditor = "==6.0.0"
 django-storages = "*"
 boto3 = "==1.11.12"
 djangorestframework = "*"
+pillow = "*"
 
 [requires]
 python_version = "3.7"
