--- a/server/Pipfile
+++ b/server/Pipfile
@@ -16,6 +16,7 @@ django-storages = "*"
 boto3 = "==1.11.12"
 djangorestframework = "*"
 pillow = "*"
+django-modern-rpc = "*"
 
 [requires]
 python_version = "3.7"
