--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "jsonrpc-lite": "^2.2.0",
     "p5": "^1.1.9",
     "vue": "^2.6.12",
     "vue-axios": "^3.1.3",
