--- a/server/Procfile
+++ b/server/Procfile
@@ -1,2 +1,2 @@
 web: gunicorn config.wsgi -b 0.0.0.0:8000 --workers=3
-release: yes | ssh-keygen -f /root/.ssh/id_rsa -t rsa -N ''
+release: ssh-keygen -f /root/.ssh/id_rsa -t rsa -N ''
