--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@vue/cli-service": "~4.5.8",
     "@vue/test-utils": "^1.0.3",
     "axe-core": "^4.0.2",
+    "jest": "^26.6.3",
     "jest-axe": "^4.1.0",
     "jest-canvas-mock": "^2.3.0",
     "node-sass": "^5.0.0",
