--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "jest-axe": "^4.1.0",
     "jest-canvas-mock": "^2.3.0",
     "node-sass": "^5.0.0",
+    "prettier": "^2.2.1",
     "sass-loader": "^10.0.5",
     "vue-axe": "^2.4.2",
     "vue-template-compiler": "^2.6.12"
