Move server scripts add to gitignore and mount as volume in docker container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     command: sh launch-dev.sh
     volumes:
       - .:/code
+      - ./jacktrip-server-automation:/app/storage/jacktrip-server-automation
     ports:
       - 8000:8000
     depends_on:
