--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,11 @@
     "@vue/cli-service": "~4.5.8",
     "@vue/test-utils": "^1.0.3",
     "axe-core": "^4.0.2",
+    "jest": "^26.6.3",
     "jest-axe": "^4.1.0",
     "jest-canvas-mock": "^2.3.0",
     "node-sass": "^5.0.0",
+    "prettier": "^2.2.1",
     "sass-loader": "^10.0.5",
     "vue-axe": "^2.4.2",
     "vue-template-compiler": "^2.6.12"
