--- a/server/app.json
+++ b/server/app.json
@@ -1,7 +1,8 @@
 {
     "scripts": {
       "dokku": {
-        "predeploy": "ssh-keygen -f /root/.ssh/id_rsa -t rsa -N ''"
+        "predeploy": "ssh-keygen -f /root/.ssh/id_rsa -t rsa -N ''",
+        "postdeploy": "python manage.py collectstatic --noinput"
       }
     }
   }
