--- a/server/app.json
+++ b/server/app.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
       "dokku": {
+        "predeploy": "python manage.py collectstatic --noinput",
         "postdeploy": "ssh-keygen -f /root/.ssh/id_rsa -t rsa -N ''"
       }
     }
