--- a/server/app.json
+++ b/server/app.json
@@ -1,8 +1,7 @@
 {
     "scripts": {
       "dokku": {
-        "predeploy": "python /code/server/manage.py collectstatic --noinput",
-        "postdeploy": "ssh-keygen -f /root/.ssh/id_rsa -t rsa -N ''"
+        "predeploy": "ssh-keygen -f /root/.ssh/id_rsa -t rsa -N ''"
       }
     }
   }
