--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,27 +7,27 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "jsonrpc-lite": "^2.2.0",
-    "p5": "^1.1.9",
+    "p5": "^1.2.0",
     "vue": "^2.6.12",
-    "vue-axios": "^3.1.3",
+    "vue-axios": "^3.2.4",
     "vue-burger-menu": "^2.0.5",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-router": "~4.5.8",
-    "@vue/cli-plugin-unit-jest": "^4.5.8",
-    "@vue/cli-service": "~4.5.8",
-    "@vue/test-utils": "^1.0.3",
-    "axe-core": "^4.0.2",
+    "@vue/cli-plugin-router": "^4.5.11",
+    "@vue/cli-plugin-unit-jest": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
+    "@vue/test-utils": "^1.1.3",
+    "axe-core": "^4.1.2",
     "jest": "^26.6.3",
     "jest-axe": "^4.1.0",
-    "jest-canvas-mock": "^2.3.0",
+    "jest-canvas-mock": "^2.3.1",
     "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
-    "sass-loader": "^10.0.5",
-    "vue-axe": "^2.4.2",
+    "sass-loader": "^10.1.1",
+    "vue-axe": "^2.4.4",
     "vue-template-compiler": "^2.6.12"
   }
 }
