--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@vue/cli-service": "^4.5.11",
     "@vue/test-utils": "^1.1.3",
     "axe-core": "^4.1.2",
+    "eslint": "^7.20.0",
+    "eslint-plugin-vue": "^7.6.0",
     "jest": "^26.6.3",
     "jest-axe": "^4.1.0",
     "jest-canvas-mock": "^2.3.1",
