--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@vue/test-utils": "^1.1.3",
     "axe-core": "^4.1.2",
     "eslint": "^7.20.0",
+    "eslint-config-prettier": "^8.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.6.0",
     "jest": "^26.6.3",
     "jest-axe": "^4.1.0",
