--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,11 @@
     "axe-core": "^4.1.2",
     "eslint": "^7.20.0",
     "eslint-config-prettier": "^8.0.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-vue": "^7.6.0",
     "jest": "^26.6.3",
     "jest-axe": "^4.1.0",
