Add vue3 rules to linter

--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -2,7 +2,7 @@ env:
   browser: true
   es2021: true
 extends:
-  - 'plugin:vue/essential'
+  - 'plugin:vue/vue3-essential'
   - standard
   - prettier
 parserOptions:
