Install ansible-runner

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -21,6 +21,7 @@ pillow = "~=8.1.0"
 psycopg2-binary = "~=2.8.5"
 schedule = "~=1.0.0"
 whitenoise = "~=5.1.0"
+ansible-runner = "*"
 
 [requires]
 python_version = "3.8"
