--- a/server/Pipfile
+++ b/server/Pipfile
@@ -22,6 +22,7 @@ psycopg2-binary = "~=2.8.5"
 schedule = "~=1.0.0"
 whitenoise = "~=5.1.0"
 ansible-runner = "*"
+ansible = "*"
 
 [requires]
 python_version = "3.8"
