--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
           docker-compose exec -T server python manage.py migrate
           docker-compose exec -T server python manage.py test
       - name: Vue tests
-        run: docker-compose exec -T frontend ls
+        run: docker ps
