Docker ps after sleep

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
           docker-compose exec -T server python manage.py test
       - name: Frontend tests
         run: |
-          sleep 20s
-          docker-compose exec -T frontend npm run test:unit
+          sleep 30s
+          docker ps
