--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build the stack
-        run: docker-compose up -d
-      - name: Django tests
-        run: |
-          docker-compose exec -T server python manage.py collectstatic --noinput
-          docker-compose exec -T server python manage.py migrate
-          docker-compose exec -T server python manage.py test
+        run: docker-compose up
       - name: Frontend tests
         run: |
-          sleep 30s
           docker ps
