--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
     working_dir: /server
     command: sh launch-dev.sh
     volumes:
-      - ./server:/server
+      - ./server/dashboard:/server/dashboard
+      - ./server/pages:/server/pages
+      - ./server/sounds:/server/sounds
       - ./jacktrip-server-automation:/app/storage/jacktrip-server-automation
     ports:
       - 8000:8000
@@ -30,7 +32,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: frontend-base
+      target: frontend-dev
     environment:
       - "NODE_ENV=development"
     ports:
