--- a/server/Pipfile
+++ b/server/Pipfile
@@ -21,8 +21,8 @@ pillow = "~=8.1.0"
 psycopg2-binary = "~=2.8.5"
 schedule = "~=1.0.0"
 whitenoise = "~=5.1.0"
-ansible-runner = "*"
-ansible = "*"
+ansible-runner = "~=2.0.2"
+ansible = "~=4.6.0"
 
 [requires]
 python_version = "3.8"
