--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .env
+.env-dev
 .vscode
 frontend/node_modules/
 frontend/build/*
 server/staticfiles/*
 server/static/dist/*
 server/templates/vue_build/*
-jacktrip-server-automation
