--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,23 +11,13 @@ services:
       - ./server/dashboard:/server/dashboard
       - ./server/pages:/server/pages
       - ./server/sounds:/server/sounds
-      - ./jacktrip-server-automation:/app/storage/jacktrip-server-automation
     ports:
       - 8000:8000
     depends_on:
       - db
       - frontend
-    environment:
-      - "USE_LOCAL_STORAGE=TRUE"
-      - "DJANGO_SECRET_KEY=p=4f_cxdno4qj6itdx!@v%7oij3ma%b_y#422*t(dbpk9^pt08"
-      - "DJANGO_DEBUG=True"
-      - "DJANGO_SECURE_SSL_REDIRECT=False"
-      - "DJANGO_SECURE_HSTS_SECONDS=0"
-      - "DJANGO_SECURE_HSTS_INCLUDE_SUBDOMAINS=False"
-      - "DJANGO_SECURE_HSTS_PRELOAD=False"
-      - "DJANGO_SESSION_COOKIE_SECURE=False"
-      - "DJANGO_CSRF_COOKIE_SECURE=False"
-
+    env_file:
+      - .env-dev
   frontend:
     build:
       context: .
