--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 .env
 .vscode
 frontend/node_modules/
-frontend/build/*
+frontend/build/dist/*
+frontend/build/templates/*
 server/staticfiles/*
 server/static/dist/*
 server/templates/vue_build/*
