--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,16 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      target: server-dev
+      target: server
+      args:
+        - VUE_BUILD_MODE=development
+
     working_dir: /server
     command: sh launch-dev.sh
     volumes:
       - ./server/dashboard:/server/dashboard
       - ./server/pages:/server/pages
       - ./server/sounds:/server/sounds
-      - ./jacktrip-server-automation:/app/storage/jacktrip-server-automation
     ports:
       - 8000:8000
     depends_on:
@@ -27,14 +29,13 @@ services:
       - "DJANGO_SECURE_HSTS_PRELOAD=False"
       - "DJANGO_SESSION_COOKIE_SECURE=False"
       - "DJANGO_CSRF_COOKIE_SECURE=False"
-
   frontend:
     build:
       context: .
       dockerfile: Dockerfile
-      target: frontend-dev
-    environment:
-      - "NODE_ENV=development"
+      target: frontend
+      args:
+        - VUE_BUILD_MODE=development
     ports:
       - 8080:8080
     volumes:
