Use default env file for workflow build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - db
       - frontend
     env_file:
-      - .env
+      - .env-default
   frontend:
     build:
       context: .
