Don't init RPC processes if keys not present

--- a/.env-default
+++ b/.env-default
@@ -15,11 +15,11 @@ DJANGO_CSRF_COOKIE_SECURE=False
 
 # RPC MODULE RUNTIME ENV VARS
 
-LINODE_PAT=pat_key
-MAX_LINODES=1
-PRIVATE_KEY=""
-LOUNGE_MUSIC_URL=""  
-ICECAST_SERVER_URL=""  
-ICECAST_PORT=3210  
-ICECAST_MOUNT=mount  
-ICECAST_PASSWORD=password  
+# LINODE_PAT=
+# MAX_LINODES=1
+# PRIVATE_KEY=""
+# LOUNGE_MUSIC_URL=""  
+# ICECAST_SERVER_URL=""  
+# ICECAST_PORT=3210  
+# ICECAST_MOUNT=mount  
+# ICECAST_PASSWORD=password  
