Add assets to docker-compose volumes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - 8080:8080
     volumes:
       - ./frontend/src:/frontend/src
+      - ./frontend/assets:/frontend/assets
     working_dir: /frontend
     command: npm run serve
   db:
